feat: Improve CI workflow by listing module functions
This commit makes the following changes to the CI workflow:

- Updates the "List Main Module Functions" step to use the "functions" verb instead of "call" to list the functions in the main module.
- Updates the "List Test Module Functions" step to use the "functions" verb instead of "call" to list the functions in the test module.
- Updates the "List Example Module Functions" step to use the "functions" verb instead of "call" to list the functions in the example module.

These changes simplify the workflow and make it more explicit about the actions being performed.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -84,9 +84,8 @@ jobs:
       - name: 📦 List Main Module Functions
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
-          verb: call
-          workdir: ${{ matrix.module }}
-          module: .
+          verb: functions
+          module: ${{ matrix.module }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -95,8 +94,7 @@ jobs:
       - name: 🧪 List Test Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          verb: call
-          args: ""
+          verb: functions
           module: ${{ matrix.module }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
@@ -106,7 +104,7 @@ jobs:
       - name: 📄 List Example Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          verb: call
+          verb: functions
           args: ""
           module: ${{ matrix.module }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
