--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -175,37 +175,33 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: 📦 Dagger Develop Main Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-        with:
-          verb: develop
-          module: ${{ matrix.module }}
-          version: ${{ env.DAGGER_VERSION }}
-          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 🧪 Dagger Develop Test Module
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
-        with:
-          verb: develop
-          module: ${{ matrix.module }}/tests
-          version: ${{ env.DAGGER_VERSION }}
-          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🔧 Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
-      - name: 📝 Run golangci-lint on Main Module
-        working-directory: ${{ matrix.module }}
+      - name: 📝 Run lint on Main Module
         run: |
-          golangci-lint run --config=../.golangci.yml --verbose
+          # Dagger develop for main module
+          dagger develop --module ${{ matrix.module }} \
+            --version ${{ env.DAGGER_VERSION }} \
+            --cloud-token ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
-      - name: 📝 Run golangci-lint on Test Module
-        working-directory: ${{ matrix.module }}/tests
+          # Run golangci-lint on main module
+          cd ${{ matrix.module }}
+          golangci-lint run --config=../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📝 Run lint on Test Module
         run: |
+          # Dagger develop for test module
+          dagger develop --module ${{ matrix.module }}/tests \
+            --version ${{ env.DAGGER_VERSION }} \
+            --cloud-token ${{ secrets.DAGGER_CLOUD_TOKEN }}
+
+          # Run golangci-lint on test module
+          cd ${{ matrix.module }}/tests
           golangci-lint run --config=../../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
