feat: Install Dagger CLI and update golangci-lint version
This commit adds the installation of the Dagger CLI to the CI workflow, using the specified `DAGGER_VERSION` environment variable. It also updates the installation of the golangci-lint tool to the latest version.

The purpose of these changes is to ensure that the CI workflow has the necessary tools installed to perform the required checks and validations during the build process.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -175,6 +175,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: 🔧 Install Dagger CLI
+        run: |
+          curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
+          dagger version
+
       - name: 🔧 Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
