fix: Update Dagger develop command in CI workflow
The commit fixes the Dagger develop command in the CI workflow for the main module. Previously, the command was missing a closing brace, which caused the workflow to fail. This change ensures the Dagger develop command is executed correctly.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -190,7 +190,7 @@ jobs:
               run: |
                   # Dagger develop for main module
                   cd ${{ matrix.module }}
-                  dagger develop }}
+                  dagger develop
 
                   # Run golangci-lint on main module
                   golangci-lint run --config=../.golangci.yml --verbose
