fix: Run lint on Main Module directory
Runs the golangci-lint command in the ${{ matrix.module }} directory, which contains the main module. The `ls -ltrah` command is added to list the contents of the directory for debugging purposes.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -195,7 +195,7 @@ jobs:
 
       - name: 📝 Run lint on Main Module
         run: |
-          cd ${{ matrix.module }}
+          cd ${{ matrix.module }} && ls -ltrah && \
           golangci-lint run --config=../.golangci.yml --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
