--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -184,7 +184,7 @@ jobs:
 
       - name: 🔧 Install golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
 
       - name: 🚀 Dagger Develop Main Module
