--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -23,7 +23,7 @@ permissions:
 env:
   GO_VERSION: "1.22"
   DAGGER_VERSION: 0.14.0
-  GOLANGCI_LINT_VERSION: "1.59.1"
+  GOLANGCI_LINT_VERSION: "v1.59.1"
 
 jobs:
   dagger-build:
