feat: Add custom error handling with ModuleError
This commit introduces a custom error handling mechanism for the AwsTagInspector module. The changes include:

- Add the `err.go` file, which defines the `ModuleError` struct and related utility functions for creating, wrapping, and joining errors.
- The `ModuleError` struct provides a consistent way to handle and report errors, with a prefixed module name and emoji representation.
- The `scanner_aws_client.go` file is updated to use the new `ModuleError` for error handling.
- The `.gitignore` file is updated to ignore generated files related to the Dagger project.

The main purpose of these changes is to improve the error handling and reporting capabilities of the AwsTagInspector module, making it easier to debug and troubleshoot issues.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,12 @@ Cargo.lock
 .aider*
 .cursorrules
 AI/
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
