--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -1,16 +1,18 @@
-name: CI Templates 🧰
+---
+name: CI Mod Templates 🧰
 on:
   push:
     branches:
       - main
       - master
     paths:
-      - "module-template/**"
-      - "module-template-light/**"
+      - module-template/**
+      - module-template-light/**
   pull_request:
     paths:
-      - "module-template/**"
-      - "module-template-light/**"
+      - module-template/**
+      - module-template-light/**
+      - .github/workflows/ci-mod-templates.yaml
   workflow_dispatch:
 
 permissions:
@@ -20,7 +22,8 @@ permissions:
 
 env:
   GO_VERSION: "1.22"
-  DAGGER_VERSION: "0.14.0"
+  DAGGER_VERSION: 0.14.0
+  GOLANGCI_LINT_VERSION: "v1.62.0"
 
 jobs:
   dagger-build:
@@ -81,30 +84,30 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 📦 List Main Module Functions
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
-          verb: call
-          workdir: ${{ matrix.module }}
+          verb: functions
+          module: ${{ matrix.module }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 🧪 List Test Module Functions
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
-          verb: call
-          workdir: ${{ matrix.module }}/tests
+          verb: functions
+          module: ${{ matrix.module }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📄 List Example Module Functions
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
-          verb: call
-          workdir: ${{ matrix.module }}/examples/go
+          verb: functions
+          module: ${{ matrix.module }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -125,9 +128,10 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 💣 Run All Tests
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
-          call: test-all
+          verb: call
+          args: test-all
           module: ${{ matrix.module }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
@@ -149,11 +153,78 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: 🥗 Run All Example Recipes
-        uses: dagger/dagger-for-github@v6
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
-          call: all-recipes
+          verb: call
+          args: all-recipes
           module: ${{ matrix.module }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  golangci-lint:
+    needs: dagger-build
+    strategy:
+      matrix:
+        module: [module-template, module-template-light]
+      fail-fast: false
+    name: 🔍 Lint ${{ matrix.module }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: 🔧 Install Dagger CLI
+        run: |
+          curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
+          dagger version
+
+      - name: 🔧 Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
+      - name: 🚀 Dagger Develop Main Module
+        run: |
+          cd ${{ matrix.module }}
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📝 Run lint on Main Module
+        run: |
+          cd ${{ matrix.module }} && ls -ltrah && \
+          golangci-lint run --config=../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🚀 Dagger Develop Test Module
+        run: |
+          cd ${{ matrix.module }}/tests && ls -ltrah && \
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📝 Run lint on Test Module
+        run: |
+          cd ${{ matrix.module }}/tests && ls -ltrah && \
+          golangci-lint run --config=../../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🚀 Dagger Develop Example Module
+        run: |
+          cd ${{ matrix.module }}/examples/go
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📝 Run lint on Example Module
+        run: |
+          cd ${{ matrix.module }}/examples/go && ls -ltrah && \
+          golangci-lint run --config=../../../.golangci.yml --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
