--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,9 @@
 if ! has nix_direnv_version || ! nix_direnv_version 2.4.0; then
   source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/2.4.0/direnvrc" "sha256-XQzUAvL6pysIJnRJyR7uVpmUSZfc7LSgWQwq/4mBr1U="
 fi
+
+# Explicitly enable experimental features
+export NIX_CONFIG="experimental-features = nix-command flakes"
+
 use flake . --impure
+use flake-root
