--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,30 +1,23 @@
----
 root:
-    - changed-files:
-          - any-glob-to-any-file: '*'
-
+  - changed-files:
+      - any-glob-to-any-file: "*"
 AnyChange:
-    - changed-files:
-          - any-glob-to-any-file: '**'
-
+  - changed-files:
+      - any-glob-to-any-file: "**"
 Documentation:
-    - changed-files:
-          - any-glob-to-any-file: '**/*.md'
-
+  - changed-files:
+      - any-glob-to-any-file: "**/*.md"
 feature:
-    - head-branch: [^feature, feature]
-
+  - head-branch: [^feature, feature]
 infrastructure:
-    - head-branch: [^infrastructure, infrastructure]
-    - changed-files:
-          - any-glob-to-any-file: ['**/*.tf', '**/*.tfvars', '**/*.hcl']
-
+  - head-branch: [^infrastructure, infrastructure]
+  - changed-files:
+      - any-glob-to-any-file: ["**/*.tf", "**/*.tfvars", "**/*.hcl"]
 release:
-    - base-branch: main
-
+  - base-branch: main
 source:
-    - changed-files:
-          - any-glob-to-any-file: '**/*.go'
+  - changed-files:
+      - any-glob-to-any-file: "**/*.go"
 ci/cd:
-    - changed-files:
-          - any-glob-to-any-file: ['**/.github/workflows/*', '**/.gitlab-ci.yml']
+  - changed-files:
+      - any-glob-to-any-file: ["**/.github/workflows/*", "**/.gitlab-ci.yml"]
