--- a/.github/workflows/ci-mod-boilerplates.yaml
+++ b/.github/workflows/ci-mod-boilerplates.yaml
@@ -1,4 +1,3 @@
----
 name: CI Mod Boilerplates 🧰
 on:
   push:
@@ -14,17 +13,14 @@ on:
       - module-template-light/**
       - .github/workflows/ci-mod-boilerplates.yaml
   workflow_dispatch:
-
 permissions:
   contents: read
   pull-requests: read
   checks: write
-
 env:
   GO_VERSION: "1.22"
   DAGGER_VERSION: 0.14.0
-  GOLANGCI_LINT_VERSION: "v1.62.0"
-
+  GOLANGCI_LINT_VERSION: v1.62.0
 jobs:
   dagger-build:
     strategy:
@@ -38,7 +34,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📦 Dagger Develop Main Module
         uses: dagger/dagger-for-github@v6
         with:
@@ -48,7 +43,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🧪 Dagger Develop Test Module
         uses: dagger/dagger-for-github@v6
         with:
@@ -58,7 +52,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📄 Dagger Develop Examples Module
         uses: dagger/dagger-for-github@v6
         with:
@@ -68,7 +61,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   dagger-list-functions:
     needs: dagger-build
     strategy:
@@ -82,7 +74,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 📦 List Main Module Functions
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
@@ -92,7 +83,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🧪 List Test Module Functions
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
@@ -102,7 +92,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📄 List Example Module Functions
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
@@ -112,7 +101,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   run-tests:
     needs: dagger-build
     strategy:
@@ -126,7 +114,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 💣 Run All Tests
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
@@ -137,7 +124,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   run-recipes:
     needs: dagger-build
     strategy:
@@ -151,7 +137,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 🥗 Run All Example Recipes
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
@@ -162,7 +147,6 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   golangci-lint:
     needs: dagger-build
     strategy:
@@ -176,52 +160,44 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
       - name: 🔧 Install Dagger CLI
         run: |
           curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
           dagger version
-
       - name: 🔧 Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
-
       - name: 🚀 Dagger Develop Main Module
         run: |
           cd ${{ matrix.module }}
           dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📝 Run lint on Main Module
         run: |
           cd ${{ matrix.module }} && ls -ltrah && \
           golangci-lint run --config=../.golangci.yml --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🚀 Dagger Develop Test Module
         run: |
           cd ${{ matrix.module }}/tests && ls -ltrah && \
           dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📝 Run lint on Test Module
         run: |
           cd ${{ matrix.module }}/tests && ls -ltrah && \
           golangci-lint run --config=../../.golangci.yml --verbose
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 🚀 Dagger Develop Example Module
         run: |
           cd ${{ matrix.module }}/examples/go
           dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: 📝 Run lint on Example Module
         run: |
           cd ${{ matrix.module }}/examples/go && ls -ltrah && \
