--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,44 +1,74 @@
+# Cache pre-commit hooks for better performance
+default_language_version:
+  python: python3
+  rust: stable
+  golang: "1.21"
+
+# Skip these files/directories for all hooks
+exclude: |
+  (?x)(
+    ^(.direnv/.*)|
+    ^(target/.*)|
+    ^(dist/.*)|
+    ^(result.*)|
+    ^(.git/.*)|
+    ^(.terraform/.*)|
+    ^(.terragrunt-cache/.*)|
+    ^(devenv/.*)
+  )
+
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+  - repo: meta
     hooks:
-      - id: trailing-whitespace
-      - id: check-added-large-files
-      - id: check-case-conflict
-      - id: check-merge-conflict
-      - id: check-shebang-scripts-are-executable
-      - id: check-symlinks
-      - id: check-toml
-      - id: check-yaml
-      - id: check-json
-      - id: detect-private-key
-      - id: end-of-file-fixer
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 3.0.0
+      - id: check-hooks-apply
+      - id: check-useless-excludes
+      - id: identity 
+
+  - repo: local
     hooks:
-      - id: git-check # Configure in .gitattributes
-      - id: git-dirty # Configure in .gitignore
-      - id: script-must-have-extension
-  - repo: https://github.com/gruntwork-io/pre-commit
-    rev: v0.1.23
-    hooks:
-      - id: shellcheck
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.1
-    hooks:
-      - id: go-fmt
-        files: .+\.go$
-      - id: go-mod-tidy
-        files: .+\.go$
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.41.0
-    hooks:
-      - id: markdownlint
-        args: [--fix, .]
-  - repo: https://github.com/tcort/markdown-link-check
-    rev: v3.12.2
-    hooks:
-      - id: markdown-link-check
-        args:
-          - -q
-          - --config=.markdown-link-check.json
+      - id: treefmt
+        name: Format files using treefmt
+        entry: treefmt
+        language: system
+        pass_filenames: true
+        types_or: [go, rust, terraform, yaml, json, markdown, nix]
+        stages: [pre-commit]
+
+      - id: rustfmt
+        name: Format Rust code
+        entry: rustfmt
+        language: system
+        pass_filenames: true
+        types: [rust]
+        stages: [pre-commit]
+        args: ["--edition=2021"]
+
+      - id: golangci-lint
+        name: Lint Go code
+        entry: golangci-lint run
+        language: system
+        pass_filenames: true
+        types: [go]
+        stages: [pre-commit]
+        args: [
+          "--fast",
+          "--max-same-issues=0",
+          "--max-issues-per-linter=0",
+          "--modules-download-mode=readonly"
+        ]
+
+      - id: yamllint
+        name: Lint YAML files
+        entry: yamllint
+        language: system
+        pass_filenames: true
+        types: [yaml]
+        stages: [pre-commit]
+        args: ["--strict"]
+
+# Global settings
+minimum_pre_commit_version: "3.0.0"
+ci:
+  autofix_commit_msg: "style: auto-format pre-commit hooks"
+  autoupdate_commit_msg: "chore: pre-commit autoupdate"
+  skip: [treefmt, rustfmt, golangci-lint, yamllint]
