feat: Improve code formatting with treefmt and Prettier
- Replace nix fmt with treefmt for formatting code
- Add Prettier support for formatting various file types, including Markdown, YAML, and JSON
- Update .yamllint.yml to use the default configuration and set some rules
- Remove unused pre-commit hooks and configurations
- Update flake.nix to include nodePackages and the Prettier formatter

--- a/.envrc
+++ b/.envrc
@@ -5,5 +5,4 @@ fi
 # Explicitly enable experimental features
 export NIX_CONFIG="experimental-features = nix-command flakes"
 
-use flake . --impure
-use flake-root
+use flake
