--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,32 +1,13 @@
-yaml-files:
-  - "*.yaml"
-  - "*.yml"
-  - .yamllint
-ignore: |
-  /.github/METADATA.yaml
+extends: default
+
 rules:
-  braces: enable
-  brackets: enable
-  colons: enable
-  commas: enable
-  comments:
+  indentation:
+    spaces: 2
+  line-length:
+    max: 80
     level: warning
-  comments-indentation:
+  trailing-spaces:
     level: warning
-  document-end: disable
-  document-start:
-    level: warning
-  empty-lines: enable
-  empty-values: disable
-  hyphens: enable
-  indentation: enable
-  key-duplicates: enable
-  key-ordering: disable
-  line-length: disable
-  new-line-at-end-of-file: enable
-  new-lines: enable
-  octal-values: disable
-  quoted-strings: disable
-  trailing-spaces: enable
-  truthy:
+  braces:
+    max-spaces-inside: 1
     level: warning
