feat: Improve pre-commit configuration and formatting
- Add `--strict` and `-c .yamllint.yml` arguments to the `yamllint` pre-commit hook
- Update the `ci.skip` list in the `.pre-commit-config.yaml` file
- Refactor the `flake.nix` file to simplify the pre-commit configuration and add support for more formatters (e.g., `alejandra`, `gofmt`, `terragrunt`)
- Update the `justfile` to use `nix develop --command treefmt` for running the code formatter

These changes aim to improve the overall code formatting and linting experience for the project, ensuring consistent code style and adherence to best practices.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,15 +47,14 @@ repos:
         name: Lint Go code
         entry: golangci-lint run
         language: system
-        pass_filenames: true
-        types: [go]
+        pass_filenames: false
         stages: [pre-commit]
-        args: [
-          "--fast",
-          "--max-same-issues=0",
-          "--max-issues-per-linter=0",
-          "--modules-download-mode=readonly"
-        ]
+        args:
+          - "--config=.golangci.yml"
+          - "--fast"
+          - "--max-same-issues=0"
+          - "--max-issues-per-linter=0"
+          - "--modules-download-mode=readonly"
 
       - id: yamllint
         name: Lint YAML files
@@ -64,7 +63,7 @@ repos:
         pass_filenames: true
         types: [yaml]
         stages: [pre-commit]
-        args: ["--strict"]
+        args: ["--strict", "-c", ".yamllint.yml"]
 
 # Global settings
 minimum_pre_commit_version: "3.0.0"
