--- a/.github/workflows/ci-modules.yaml
+++ b/.github/workflows/ci-modules.yaml
@@ -177,10 +177,22 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: 🔧 Install Dagger CLI
+        run: |
+          curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=${{ env.DAGGER_VERSION }} BIN_DIR=/usr/local/bin sudo -E sh
+          dagger version
+
       - name: 🔧 Install golangci-lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s ${{ env.GOLANGCI_LINT_VERSION }}
           sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
+      - name: 🚀 Dagger Develop Main Module
+        run: |
+          cd ${{ matrix.module }}
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📝 Run lint on Main Module
         run: |
@@ -189,10 +201,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: 🚀 Dagger Develop Test Module
+        run: |
+          cd ${{ matrix.module }}/tests
+          dagger develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: 📝 Run lint on Test Module
         run: |
           cd ${{ matrix.module }}/tests
           golangci-lint run --config=../../.golangci.yml --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🚀 Dagger Develop Example Module
+        run: |
+          cd ${{ matrix.module }}/examples/go
+          dagger develop
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
