feat: Improve YAML linting and formatting
- Add `indent-sequences: true` to `.yamllint.yml` to ensure consistent indentation
- Increase `max-line-length` to 80 characters and allow non-breakable words
- Add `new-lines` rule to enforce Unix-style line endings
- Introduce `.yamlfmt.yml` configuration for YAML formatting
- Integrate `yamlfmt` tool in the GitHub Actions workflow to automatically format YAML files
- Rename the GitHub Actions workflow to "Yaml Linter and Formatter" to reflect the new functionality

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,6 +65,13 @@ repos:
         stages: [pre-commit]
         args: ["--strict", "-c", ".yamllint.yml"]
 
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.10.0
+    hooks:
+      - id: yamlfmt
+        language: system
+        args: ["-config", ".yamlfmt.yml"]
+
 # Global settings
 minimum_pre_commit_version: "3.0.0"
 ci:
