--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -1,14 +1,24 @@
-name: Yaml Linter
+name: Yaml Linter and Formatter
 on:
   workflow_dispatch:
   push:
   pull_request:
+
 jobs:
-  yamllint:
-    name: Yamllint
+  yaml-lint-and-format:
+    name: Yaml Lint and Format
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      
+      - name: Install yamlfmt
+        run: |
+          go install github.com/google/yamlfmt/cmd/yamlfmt@latest
+      
+      - name: Run yamlfmt
+        run: |
+          yamlfmt -config .yamlfmt.yml
+      
       - name: Lint Workflows
         uses: karancode/yamllint-github-action@v2.1.1
         with:
@@ -17,6 +27,7 @@ jobs:
           yamllint_comment: "true"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
       - name: Lint GitHub config yamls
         uses: karancode/yamllint-github-action@v2.1.1
         with:
@@ -25,6 +36,7 @@ jobs:
           yamllint_comment: "true"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
       - name: Lint yaml files in root dir
         uses: karancode/yamllint-github-action@v2.1.1
         with:
