feat: Improve CI workflow and pre-commit hooks
- Add a step to auto-update pre-commit hooks in the `run-hooks` recipe
- Enhance the CI workflow for the `daggy-codegen-light-module` to handle failures more gracefully
- Update the `yaml-linter` workflow to lint GitHub config files
- Improve the formatting and readability of various YAML files

--- a/.github/workflows/cd-publish-dag-modules.yml
+++ b/.github/workflows/cd-publish-dag-modules.yml
@@ -110,5 +110,5 @@ jobs:
           echo "::notice::🎊 Successfully published all modules! Great job!"
       - name: ❌ Notify on failure
         if: failure()
-        run: |
+        run: |-
           echo "::error::💥 Failed to publish one or more modules. Please check the logs for details."
