--- a/.github/auto-comment.yml
+++ b/.github/auto-comment.yml
@@ -1,4 +1,4 @@
-pullRequestOpened: |
+pullRequestOpened: |-
   :wave: Thanks for creating a PR!
 
   Before we can merge this PR, please make sure that all the following items have been
@@ -12,6 +12,5 @@ pullRequestOpened: |
   - [ ] Updated relevant documentation (`docs/`) and code comments
   - [ ] Re-reviewed `Files changed` in the Github PR explorer
   - [ ] Applied Appropriate Labels
-
 
   Thank you for your contribution! :rocket:
