--- a/.github/config.yml
+++ b/.github/config.yml
@@ -10,5 +10,6 @@ newPRWelcomeComment: >
 
 # Configuration for first-pr-merge - https://github.com/behaviorbot/first-pr-merge
 # Comment to be posted to on pull requests merged by a first time user
-firstPRMergeComment: >
-  Congrats on merging your first pull request! 🎉 We here at `Create Go App` are proud of you.
+firstPRMergeComment: >-
+  Congrats on merging your first pull request! 🎉 We here at `Create Go App` are proud
+  of you.
