--- a/.github/workflows/cd-bump-dag-module-version.yml
+++ b/.github/workflows/cd-bump-dag-module-version.yml
@@ -11,7 +11,8 @@ permissions:
   pull-requests: write
 jobs:
   detect-modules:
-    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true && (github.base_ref == 'main' || github.base_ref == 'master'))
+    if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged
+      == true && (github.base_ref == 'main' || github.base_ref == 'master'))
     runs-on: ubuntu-latest
     outputs:
       changed_modules: ${{ steps.set-modules.outputs.changed_modules }}
@@ -106,5 +107,5 @@ jobs:
           echo "::notice::✅ Version bump process completed. Check logs for details on each module's status."
       - name: ❌ Notify on failure
         if: failure()
-        run: |
+        run: |-
           echo "::error::💥 Failed to bump version for one or more modules. Please check the logs for details."
