--- a/.github/workflows/cd-bump-publish-dag-manual.yml
+++ b/.github/workflows/cd-bump-publish-dag-manual.yml
@@ -129,5 +129,5 @@ jobs:
           echo "::notice::🎊 Successfully published all targeted modules!"
       - name: ❌ Notify on failure
         if: failure()
-        run: |
+        run: |-
           echo "::error::💥 Failed to publish one or more modules. Please check the logs for details."
