--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,9 +1,2 @@
-{
-  default: true,
-  MD003: { style: atx },
-  MD007: { indent: 4 },
-  no-hard-tabs: false,
-  no-inline-html: false,
-  whitespace: false,
-  line-length: false,
-}
+{default: true, MD003: {style: atx}, MD007: {indent: 4}, no-hard-tabs: false, no-inline-html: false,
+  whitespace: false, line-length: false}
